--- a/about.css
+++ b/about.css
@@ -1,8 +1,7 @@
-
 #about {
     position: relative;
     /* height:700px; */
-    background-color: yellow;
+    background-color: goldenrod;
     align-items: center;
     margin-top: 100px;
 
@@ -11,77 +10,63 @@
 #about .container {
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    width: 90%;
-    height: 100%;
+    justify-content: space-between;
+    width: 100%;
+    margin: auto;
     position: relative;
-    padding-top: 200px;
 
 }
 
 #about .container div:first-of-type {
     width: 50%;
     /* background-color: white; */
-    align-items: center;
-    justify-content: center;
     position: relative;
-    height: 90%;
-    
+    height: 60%;
+
 }
 
-#about .container div:first-of-type div {
-    /* background-color: black; */
-    height: 50%;
-    align-items: center;
-    align-self: center;
-    /* transform: translateY(40%); */
-    width: 50%;
-    margin: auto;
-}
 
-#about .container div:first-of-type div img {
+
+#about .container div:first-of-type img {
     width: 100%;
     height: 100%;
-    border-radius: 50%;
+    /* border-radius: 50%; */
 }
+
+
 
 
 
 
 #about .container div:last-of-type {
-    width: 50%;
-    /* background-color: white; */
-    min-height: 300px;
-}
-
-#about .container div:last-of-type div {
-    align-items: center;
-    align-self: center;
-    width: 70%;
+    padding: 0 20px;
+    width: 40%;
     margin: auto;
-    border: 1px solid black;
     text-align: center;
-    padding: 30px 20px;
+
 }
 
-#about .container div:last-of-type div h1 {
+#about .container div:last-of-type h1 {
     font-weight: bolder;
-    font-size: 30px;
+    font-size: 40px;
     color: black;
 }
 
-#about .container div:last-of-type div p {
+#about .container div:last-of-type p {
     text-align: justify;
-    font-size: 20px;
-    margin-bottom: 50px;
+    font-size: 25px;
     color: black;
+    margin: auto;
+    line-height: 1.5em;
+    word-spacing: 0.2em;
+    padding-bottom: 70px;
 
 }
 
 
 
 
-#about .container div:last-of-type div a {
+#about .container div:last-of-type a {
     font-weight: bolder;
     padding: 0 20px;
     height: 30px;
@@ -92,9 +77,10 @@
     background-color: white;
     position: relative;
     z-index: 4;
-    
+
 }
-#about .container div:last-of-type div a::after{
+
+#about .container div:last-of-type a::after {
     content: '';
     width: 100%;
     transition: 1s;
@@ -109,44 +95,25 @@
     transform: scale(0);
 }
 
-#about .container div:last-of-type div a:hover {
+#about .container div:last-of-type a:hover {
 
     text-decoration: underline;
     color: white;
 
-    
+
 }
-#about .container div:last-of-type div a:hover::after{
+
+#about .container div:last-of-type a:hover::after {
     text-decoration: underline;
-        transform: scale(1);
-        
-    
-    }
+    transform: scale(1);
 
 
-
-.customer{
 }
 
 
-@media (max-width:1100px) {
 
-    #about .container div:first-of-type div {
-        /* height: 70%; */
-        width: 70%;
-    }
-
-    #about .container div:last-of-type {
-
-        width: 80%;
-    }
-
-}
 
 @media (max-width:768px) {
-    #about{
-        
-    }
     #about .container {
         flex-direction: column;
         gap: 10rem;
@@ -154,34 +121,28 @@
     }
 
     #about .container div:first-of-type {
-        margin: auto;
-        width: 100%;
-        
-    }
-    
-    #about .container div:first-of-type {
-        margin-top: 100px;
-        width: 100%;
-        margin: auto;
-    }
+        margin-top: 20px;
+        width: 80%;
+        height: 50%;
 
-    #about .container div:first-of-type div {
-        margin: auto;
     }
-
-
 
     #about .container div:last-of-type {
-        width: 100%;
-        margin: auto;
-
-    }
-
-    #about .container div:last-of-type div {
-        margin: auto !important;
         width: 80%;
-    }
+        padding-bottom: 60px;
 
+    }
 
 }
 
+@media (max-width:500px) {
+    #about .container div:last-of-type h1 {
+        font-size: 30px;
+        margin-top: -30px;
+    }
+
+    #about .container div:last-of-type p {
+        font-size: 20px;
+    }
+
+}
