--- a/contact.css
+++ b/contact.css
@@ -54,6 +54,7 @@
     color: white;
 
 }
+
 #contact .container>div:first-of-type {
     border-right: 10px solid yellow;
     border-radius: 10px;
@@ -76,18 +77,19 @@
     padding-top: 15px;
     border-radius: 20px;
     padding-bottom: 30px;
-    box-shadow: 0 10px  yellow;
+    box-shadow: 0 10px yellow;
 }
-.submit1{
+
+.submit1 {
     cursor: pointer;
     /* padding: 10px 15px; */
     background: none;
     position: relative;
     width: 50%;
-    height: 35px;  
+    height: 35px;
     color: white;
     font-weight: bolder;
-transition: 1s;
+    transition: 1s;
     margin-left: 23%;
 
     font-size: 18px;
@@ -270,6 +272,13 @@ textarea {
     .container div:last-of-type span i {
         display: inline;
         margin-right: 40px;
+    }
+
+}
+
+@media (max-width:768px) {
+    #contact .overlay h1 {
+        font-size: 20px;
     }
 
 }
