--- a/about.css
+++ b/about.css
@@ -58,7 +58,7 @@
     color: black;
     margin: auto;
     line-height: 1.5em;
-    word-spacing: 0.2em;
+    /* word-spacing: 0.2em; */
     padding-bottom: 70px;
 
 }
