--- a/footer.css
+++ b/footer.css
@@ -14,7 +14,7 @@ footer .container {
 }
 
 .pics {
-    width: 90%;
+    width: 65%;
     padding: 50px 0;
     margin: auto;
     display: flex;
@@ -23,12 +23,13 @@ footer .container {
 }
 
 .pics div {
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
     border-radius: 10px;
     /* box-shadow: 5px 0 white; */
     overflow: hidden;
     margin: auto;
+    margin-bottom: 15px;
 }
 
 .pics div:first-child {
@@ -36,15 +37,18 @@ footer .container {
     border-top: 3px solid yellow;
 
 }
-.pics div:nth-child(2){
+
+.pics div:nth-child(2) {
     border-bottom: 3px solid yellow;
 
 }
-.pics div:nth-child(3){
+
+.pics div:nth-child(3) {
     border-top: 3px solid yellow;
 
 }
-.pics div:nth-child(4){
+
+.pics div:nth-child(4) {
     border-right: 3px solid yellow;
     border-bottom: 3px solid yellow;
 
@@ -63,35 +67,39 @@ hr {
     color: white;
     margin-bottom: 20px;
 }
-.footer{
-width: 100%;
-margin: auto;
-display: flex;
-/* background-color: yellow; */
-flex-wrap: wrap;
-margin-bottom: 20px;
+
+.footer {
+    width: 100%;
+    /* margin: auto; */
+    display: flex;
+    /* background-color: yellow; */
+    flex-wrap: wrap;
+    margin-bottom: 20px;
 
 }
-.footer div{
-    border: 1px solid white;
+
+.footer div {
+    /* border: 1px solid white; */
     margin: auto;
 }
-.footer div:first-of-type{
+
+.footer div:first-of-type {
     height: 200px;
     color: white;
-    width: 23%;
+    width: 300px;
 
 
 }
 
-.footer img{
+.footer img {
     margin-top: 30px;
     width: 80px;
     border-radius: 50%;
     height: 80px;
 
 }
-.footer div:first-of-type h1{
+
+.footer div:first-of-type h1 {
     font-size: 20px;
 
 
@@ -99,24 +107,36 @@ margin-bottom: 20px;
 
 
 
-.footer div:nth-of-type(2){
+.footer div:nth-of-type(2) {
     height: 200px;
     color: white;
-    width: 20%;
+    width: 250px;
 
 
 }
-.footer div:nth-of-type(3){
+
+.footer div:nth-of-type(3) {
     height: 200px;
     color: white;
-    width: 24%;
+    width: 340px;
 
 
 }
-.footer div:nth-of-type(4){
+
+.footer div:nth-of-type(4) {
     height: 200px;
     color: white;
-    width: 30%;
+    width: 360px;
 
 
+}
+
+@media (max-width:500px) {
+    footer .container .pics div {
+        width: 100%;
+    }
+
+    footer .container h1 {
+        font-size: 23px;
+    }
 }
