--- a/style.css
+++ b/style.css
@@ -14,6 +14,28 @@ body {
     width: 100%;
 }
 
+.preloader{
+    z-index: 2000;
+    position: fixed;
+    top:0;
+    background: yellow;
+    width: 100%;
+    height: 100%;
+}
+
+.preloader img{
+    margin-top: 20%;
+    margin-left: 40%;
+    height: 150px;
+    width: 190px;
+    transform: scale(0);
+    animation: zoom 5s infinite;
+}
+@keyframes zoom{
+    100%{
+        transform: scale(1);
+    }
+}
 
 
 @keyframes trans {
